[package]
name = "cyclang"
description = "Cyclang is a toy language built in LLVM."
version = "0.1.14"
edition = "2021"
readme = "./README.md"
keywords = ["cyclang", "llvm", "pest", "language"]
license = "Apache-2.0/MIT"
repository = "https://github.com/lyledean1/cyclang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
dyn-clone = "1.0.11"
libc = "0.2.149"
llvm-sys = "170.0.0"
pest = "2.7.0"
pest_derive = "2.7.0"
rustyline = "11.0.0"
text-colorizer = "1.0.0"
