[workspace]
members = [
"crates/cyclang-macros", "crates/cyclang", "crates/cyclang-backend", "crates/cyclang-parser"]
resolver = "2"

[workspace.package]
description = "Cyclang is a toy language built in LLVM."
version = "0.1.18"
edition = "2021"
readme = "./README.md"
keywords = ["cyclang", "llvm", "pest", "language", "wasm"]
license = "Apache-2.0/MIT"
repository = "https://github.com/lyledean1/cyclang"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = {version = "4.1.8", features = ["derive"]}
dyn-clone = "1.0.11"
libc = "0.2.149"
llvm-sys = "181.0.0"
pest = "2.7.10"
pest_derive = "2.7.10"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rustyline = "12.0.0"
syn = "2.0.38"
text-colorizer = "1.0.0"
cyclang-macros = { path = "./crates/cyclang-macros" , version = "0.1.18"}
cyclang-backend = { path = "./crates/cyclang-backend", version = "0.1.18"}
cyclang-parser = { path = "./crates/cyclang-parser", version = "0.1.18"}
