[package]
name = "cyclang-macros"
description = "Supporting procedural macros for cyclang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"


[lib]
proc-macro = true

