[package]
name = "cyclang-parser"
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.11"
libc = "0.2.149"
pest = "2.7.0"
pest_derive = "2.7.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rustyline = "12.0.0"
syn = "2.0.38"
text-colorizer = "1.0.0"
anyhow = "1.0.81"
