[package]
name = "codegen"
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.81"
dyn-clone = "1.0.11"
libc = "0.2.149"
llvm-sys = "211.0.0"
parser = { workspace = true }
tempfile = "3.20.0"
