[package]
name = "cyclang-parser"
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
