[package]
name = "cyclang"
description = "Cyclang is a toy language built in LLVM."
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
quote = "1.0.33"
rustyline = "14.0.0"
text-colorizer = "1.0.0"
anyhow = "1.0.81"
cyclang-backend = { workspace = true}
cyclang-parser = { workspace = true}
